PYIC-1975: Update Retrieve CRI Credential Lambda to get access_token from SessionItem rather than Request Body